Added ability to control countdown on one page from a different page

--- a/SpeechTimer/Views/Timer/Index 1.cshtml
+++ b/SpeechTimer/Views/Timer/Index 1.cshtml
@@ -18,3 +18,12 @@
         <h3 id="counter"></h3>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-md-5">
+        <input id="inHours" type="number" name="hours" /> hours
+        <input id="inMinutes" type="number" name="minutes" /> minutes
+        <input id="inSeconds" type="number" name="seconds" /> seconds
+        <input id="submitTime" type="button" name="Set Countdown" value="Set Countdown"/>
+    </div>
+</div>
