--- a/SpeechTimer/Views/Home/Index.cshtml
+++ b/SpeechTimer/Views/Home/Index.cshtml
@@ -3,29 +3,22 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <h1>Speech Timer</h1>
+    <p class="lead">Speech Timer is a cross-device countdown timer that lets you view and control the same countdown from multiple devices</p>
+    <p><a href="https://github.com/ZainRizvi/SpeechTimer" class="btn btn-primary btn-large">Pull it from GitHub</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Countdown Timer</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            View a large countdown timer that can be seen from a distance
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="@Url.Action("Countdown", "Timer")">View Timer &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Controls</h2>
+        <p>Control the countdown to pause, resume, and set the time remaining</p>
+        <p><a class="btn btn-default" href="@Url.Action("Controls", "Timer")">Controls &raquo;</a></p>
     </div>
 </div>
