--- a/SpeechTimer/Views/Timer/Countdown.cshtml
+++ b/SpeechTimer/Views/Timer/Countdown.cshtml
@@ -16,5 +16,6 @@
     <div class="col-md-4">
         <h2>Time Remaining:</h2>
         <h3 id="counter"></h3>
+        @*<input type="text" class="dial" data-min="0" data-max="59" name="seconds" id="seconds" />*@
     </div>
 </div>
