Changed UI to convert input and time display to show nice knobs

--- a/SpeechTimer/Content/Site.css
+++ b/SpeechTimer/Content/Site.css
@@ -40,3 +40,16 @@ input[type="checkbox"].input-validation-error {
 .validation-summary-valid {
     display: none;
 }
+
+.float-left {
+    float: left;
+}
+
+.float-container {
+    overflow: hidden;
+}
+
+div.knob-container {
+    margin: 10px;
+}
+
