--- a/SpeechTimer/Views/Timer/Countdown.cshtml
+++ b/SpeechTimer/Views/Timer/Countdown.cshtml
@@ -15,8 +15,21 @@
 <div class="row">
     <div class="col-md-4">
         <h2>Time Remaining:</h2>
+        <div class="float-container">
+            <div class="float-left knob-container">
+                <h4>Hours</h4>
+                <input id="hours" type="text" class="dial" data-min="0" data-max="5" name="hours" />
+            </div>
+            <div class="float-left knob-container">
+                <h4>Minutes</h4>
+                <input id="minutes" type="text" class="dial" data-min="0" data-max="59" name="minutes" />
+            </div>
+            <div class="float-left knob-container">
+                <h4>Seconds</h4>
+                <input id="seconds" type="text" class="dial" data-min="0" data-max="59" name="seconds" />
+            </div>
+        </div>
         <h3 id="counter"></h3>
-        @*<input type="text" class="dial" data-min="0" data-max="59" name="seconds" id="seconds" />*@
         <div>Session Code: <span id="sessionCode"></span></div>
     </div>
 </div>
