--- a/SpeechTimer/Content/Site.css
+++ b/SpeechTimer/Content/Site.css
@@ -41,7 +41,7 @@ input[type="checkbox"].input-validation-error {
     display: none;
 }
 
-.float-left {
+/*.float-left {
     float: left;
 }
 
@@ -51,5 +51,14 @@ input[type="checkbox"].input-validation-error {
 
 div.knob-container {
     margin: 10px;
+}*/
+
+div.rectangle {
+    min-height: 50px;
+    background-color: #87CEEB;
+    float: right;
 }
 
+div.rectangle-container {
+   
+}
