--- a/SpeechTimer/Views/Timer/Countdown.cshtml
+++ b/SpeechTimer/Views/Timer/Countdown.cshtml
@@ -14,8 +14,17 @@
 
 <div class="row">
     <div>
-        <h2>Time Remaining:</h2>
-        
+        <h2>Time Remaining</h2>
+    </div>
+</div>
+<div class="row">
+    <div class="rectangle" id="rectangle"></div>
+</div>
+<div class="row">
+    <h3 id="counter"></h3>
+</div>
+<div class="row">
+    <div>
         <div class="row">
             <div class="col-sm-4" >
                 <h4>Hours</h4>
@@ -33,10 +42,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-12">
-        <h3 id="counter"></h3>
-    </div>
-    <div class="col-md-12">
+    <div>
         Session Code: <span id="sessionCode"></span>
     </div>
 </div>
