Made dials size adjust on smaller browsers for better UX

--- a/SpeechTimer/Views/Timer/Countdown.cshtml
+++ b/SpeechTimer/Views/Timer/Countdown.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "TimerIndex";
 }
 
@@ -26,17 +25,23 @@
 <div class="row">
     <div>
         <div class="row">
-            <div class="col-sm-4" >
-                <h4>Hours</h4>
-                <input id="hours" type="text" class="dial" data-min="0" data-max="5" name="hours" />
+            <div class="col-xs-4">
+                <div>
+                    <h4>Hours</h4>
+                    <input id="hours" type="text" class="dial" data-min="0" data-max="5" name="hours" />
+                </div>
             </div>
-            <div class="col-sm-4">
-                <h4>Minutes</h4>
-                <input id="minutes" type="text" class="dial" data-min="0" data-max="59" name="minutes" />
+            <div class="col-xs-4">
+                <div>
+                    <h4>Minutes</h4>
+                    <input id="minutes" type="text" class="dial" data-min="0" data-max="59" name="minutes" />
+                </div>
             </div>
-            <div class="col-sm-4">
-                <h4>Seconds</h4>
-                <input id="seconds" type="text" class="dial" data-min="0" data-max="59" name="seconds" />
+            <div class="col-xs-4">
+                <div>
+                    <h4>Seconds</h4>
+                    <input id="seconds" type="text" class="dial" data-min="0" data-max="59" name="seconds" />
+                </div>
             </div>
         </div>
     </div>
