--- a/SpeechTimer/Views/Timer/Controls.cshtml
+++ b/SpeechTimer/Views/Timer/Controls.cshtml
@@ -19,17 +19,17 @@
 
 <h2>Controls</h2>
 
-<div class="row">
-    <div class="col-sm-4">
-        <h4>Hours</h4>
+<div class="row" id="controls-container">
+    <div class="col-xs-4">
+        <p class="h4">Hours</p>
         <input id="inHours" type="text" class="dial" data-min="0" data-max="5" name="hours" />
     </div>
-    <div class="col-sm-4">
-        <h4>Minutes</h4>
+    <div class="col-xs-4">
+        <p class="h4">Minutes</p>
         <input id="inMinutes" type="text" class="dial" data-min="0" data-max="59" name="minutes" />
     </div>
-    <div class="col-sm-4">
-        <h4>Seconds</h4>
+    <div class="col-xs-4">
+        <p class="h4">Seconds</p>
         <input id="inSeconds" type="text" class="dial" data-min="0" data-max="59" name="seconds" />
     </div>
 </div>
