--- a/SpeechTimer/Views/Timer/Countdown.cshtml
+++ b/SpeechTimer/Views/Timer/Countdown.cshtml
@@ -13,15 +13,16 @@
 
 <div class="row">
     <div>
-        <h2>Time Remaining</h2>
+        <p class="h1">Time Remaining</p>
     </div>
+</div>
+<div class="row">
+    <p id="counter" class="h2"></p>
 </div>
 <div class="row">
     <div class="rectangle" id="rectangle"></div>
 </div>
-<div class="row">
-    <h3 id="counter"></h3>
-</div>
+<!--
 <div class="row">
     <div>
         <div class="row">
@@ -46,8 +47,9 @@
         </div>
     </div>
 </div>
+-->
 <div class="row">
-    <div>
+    <div class="top-buffer">
         Session Code: <span id="sessionCode"></span>
     </div>
 </div>
