--- a/SpeechTimer/Views/Timer/Countdown.cshtml
+++ b/SpeechTimer/Views/Timer/Countdown.cshtml
@@ -13,11 +13,11 @@
 
 <div class="row">
     <div>
-        <p class="h1">Time Remaining</p>
+        <p class="h1">Time Remaining - <span id="counter" class="h1"></span></p>
     </div>
 </div>
 <div class="row">
-    <p id="counter" class="h2"></p>
+    
 </div>
 <div class="row">
     <div class="rectangle" id="rectangle"></div>
