--- a/SpeechTimer/Views/Timer/Countdown.cshtml
+++ b/SpeechTimer/Views/Timer/Countdown.cshtml
@@ -12,8 +12,8 @@
 }
 
 <div class="row">
-    <div>
-        <p class="h1">Time Remaining - <span id="counter" class="h1"></span></p>
+    <div class="top-buffer">
+        <p class="h1">Time Remaining: <span id="counter" class="h1"></span></p>
     </div>
 </div>
 <div class="row">
@@ -22,32 +22,6 @@
 <div class="row">
     <div class="rectangle" id="rectangle"></div>
 </div>
-<!--
-<div class="row">
-    <div>
-        <div class="row">
-            <div class="col-xs-4">
-                <div>
-                    <h4>Hours</h4>
-                    <input id="hours" type="text" class="dial" data-min="0" data-max="5" name="hours" />
-                </div>
-            </div>
-            <div class="col-xs-4">
-                <div>
-                    <h4>Minutes</h4>
-                    <input id="minutes" type="text" class="dial" data-min="0" data-max="59" name="minutes" />
-                </div>
-            </div>
-            <div class="col-xs-4">
-                <div>
-                    <h4>Seconds</h4>
-                    <input id="seconds" type="text" class="dial" data-min="0" data-max="59" name="seconds" />
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
--->
 <div class="row">
     <div class="top-buffer">
         Session Code: <span id="sessionCode"></span>
