--- a/SpeechTimer/Views/Timer/Controls.cshtml
+++ b/SpeechTimer/Views/Timer/Controls.cshtml
@@ -33,7 +33,7 @@
         <input id="inSeconds" type="text" class="dial" data-min="0" data-max="59" name="seconds" />
     </div>
 </div>
-<div class="row">
+<div class="row top-buffer">
     <div class="col-md-12">
         <input id="submitTime" class="btn btn-default" type="button" name="Set Countdown" value="Set Countdown" />
         <input id="pause" class="btn btn-default" type="button" value="Pause" />
