--- a/SpeechTimer/Views/Home/Index.cshtml
+++ b/SpeechTimer/Views/Home/Index.cshtml
@@ -21,4 +21,9 @@
         <p>Control the countdown to pause, resume, and set the time remaining</p>
         <p><a class="btn btn-default" href="@Url.Action("Controls", "Timer")">Controls &raquo;</a></p>
     </div>
+    @*<div class="col-md-4">
+        <h2>Minimal Timer</h2>
+        <p>View countdown timer in minimalist mode</p>
+        <p><a class="btn btn-default" href="@Url.Action("MinimalTimer", "Timer")">Minimal Timer &raquo;</a></p>
+    </div>*@
 </div>
