Starting move to a single page timer

--- a/SpeechTimer/Views/Home/Index.cshtml
+++ b/SpeechTimer/Views/Home/Index.cshtml
@@ -21,9 +21,9 @@
         <p>Control the countdown to pause, resume, and set the time remaining</p>
         <p><a class="btn btn-default" href="@Url.Action("Controls", "Timer")">Controls &raquo;</a></p>
     </div>
-    @*<div class="col-md-4">
-        <h2>Minimal Timer</h2>
+    <div class="col-md-4">
+        <h2>Single Page Timer</h2>
         <p>View countdown timer in minimalist mode</p>
-        <p><a class="btn btn-default" href="@Url.Action("MinimalTimer", "Timer")">Minimal Timer &raquo;</a></p>
-    </div>*@
+        <p><a class="btn btn-default" href="@Url.Action("SinglePage", "Timer")">Single Page Timer &raquo;</a></p>
+    </div>
 </div>
