Working to enable javascript to load correctly on both single and double page views

--- a/SpeechTimer/Views/Timer/_Controls.cshtml
+++ b/SpeechTimer/Views/Timer/_Controls.cshtml
@@ -34,6 +34,8 @@
             <input id="setSessionCode" class="btn btn-default" type="button" value="Set" />
         </div>
     </form>
-    <input id="currentSessionCode" type="hidden" name="sessionCode" />
+    <div class="hidden">        
+        Session Code: <span id="sessionCode"></span>
+    </div>
 </div>
 
