Fixed session management for singleview.  Still broken: in one second countdown goes down by the number of people in a session

--- a/SpeechTimer/Views/Timer/_Controls.cshtml
+++ b/SpeechTimer/Views/Timer/_Controls.cshtml
@@ -30,7 +30,7 @@
 <div class="row">
     <form class="form-inline">
         <div class="form-group">
-            <label for="SessionCode">Session Code: </label> <input id="sessionCode" class="form-control" type="text" name="sessionCode" />
+            <label for="SessionCode">Session Code: </label> <input id="sessionCodeInput" class="form-control" type="text" name="sessionCode" />
             <input id="setSessionCode" class="btn btn-default" type="button" value="Set" />
         </div>
     </form>
