--- a/SpeechTimer/Views/Timer/_Timer.cshtml
+++ b/SpeechTimer/Views/Timer/_Timer.cshtml
@@ -1,6 +1,7 @@
 ﻿<div class="row">
     <div class="top-buffer">
-        <p class="h1">Time Remaining: <span id="counter" class="h1"></span></p>
+        <p class="h1 realbig">Time Remaining:</p>
+        <p class="h1 realrealbig"><span id="counter"></span></p>
     </div>
 </div>
 <div class="row">
